Fix some z-index issues.

--- a/_sass/listing.scss
+++ b/_sass/listing.scss
@@ -241,7 +241,7 @@
       left: 0;
       height: 300px;
       width: 100%;
-      z-index: 1;
+      z-index: -1;
       background-image: linear-gradient(to bottom, rgba(#eee, 0), #080808);
     }
   }
