--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -39,6 +39,7 @@
   position: absolute;
   top: 20px;
   right: 20px;
+  z-index: 30;
 }
 
 @mixin close-button-small {
